fix bug that collapses design when use changes window size

--- a/janken.css
+++ b/janken.css
@@ -14,6 +14,14 @@ body {
 	margin-right: auto;
 }
 
+#game {
+	position: relative;
+	width: 960px;
+	height: 720px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .hand {
 	position: absolute;
 	width: 110px;
@@ -29,7 +37,7 @@ body {
     -o-transform: scaleX(-1);
     -moz-transform: scaleX(-1);
     transform: scaleX(-1);
-    left: 850px;
+    left: 900px;
 }
 
 #score_div {
@@ -79,6 +87,7 @@ body {
 	cursor: pointer;
 	color: white;
 	position: absolute;
+	top: 20px;
 	right: 50px;
 	font-size: 40px;
 	width: 50px;
@@ -97,7 +106,8 @@ body {
 	cursor: pointer;
 	color: white;
 	position: absolute;
-	right: 150px;
+	top: 20px;
+	right: 130px;
 	font-size: 35px;
 	width: 50px;
 	height: 50px;
